// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iProductTitle should show component with product name 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee mug - Sin Imagen
  </span>
</div>
`;

exports[`iProductTitle should show component with title 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;
